--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,9 @@
 		"ghcr.io/devcontainers/features/conda:1": {},
 		"ghcr.io/wxw-matt/devcontainer-features/command_runner:0": {}
 	},
+	"containerEnv": {
+        "TZ": "Asia/Tokyo"
+    },
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Configure tool-specific properties.
